# jokolay

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  about.toml  architecture.md  build.rs  deny.toml  i18n.toml  index.html  jokolay-a6d389e8f6dc307b.js  jokolay-b475b322715b066d.js  jokolay-c5e64f9108302d66.js  license.html  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/workflows/: artifact.yml  checkmate.yml  ci.yml  gh_pages.yml  jokolay_artifact.yml  jokolink.yml  jokolink_artifact.yml  release.yml  rust.yml
crates/bevy_glfw/: Cargo.toml  README.md
crates/bevy_glfw/examples/: simple.rs
crates/bevy_glfw/src/: converters.rs  events.rs  glfw_windows.rs  lib.rs
crates/jmf/: Cargo.toml  README.md  architecture.md  build.rs
crates/jmf/src/: lib.rs  main.rs
crates/jmf/src/bevy/: mod.rs
crates/jmf/src/manager/: mod.rs
crates/jmf/src/manager/pack/: archive.rs  category.rs  marker.rs  mod.rs  trail.rs
crates/jmf/src/manager/pack/xml/: mod.rs  template.rs  test.xml  xmlfile_schema.xsd
crates/joko_core/: Cargo.toml
crates/joko_core/src/: init.rs  lib.rs  trace.rs
crates/joko_core/src/manager/: mod.rs
crates/joko_core/src/manager/trace/: mod.rs
crates/joko_desktop/: Cargo.toml
crates/joko_ext/: Cargo.toml
crates/joko_marker_format/: Cargo.toml  README.md  build.rs
crates/joko_marker_format/src/: lib.rs
crates/joko_marker_format/src/io/: deserialize.rs  error.rs  mod.rs  serialize.rs
crates/joko_marker_format/src/manager/: live_pack.rs  mod.rs
crates/joko_marker_format/src/pack/: common.rs  error.rs  marker.rs  mod.rs  trail.rs
crates/joko_marker_format/src/pack/xml/: mod.rs
crates/joko_plugins/: Cargo.toml
crates/joko_plugins/src/: lib.rs
crates/joko_render/: Cargo.toml
crates/joko_render/shaders/: marker.fs  marker.vs  marker.wgsl
crates/joko_render/src/: billboard.rs  lib.rs  marker.rs  three_d.rs
crates/joko_render/src/wgpu/: marker.wgsl  mod.rs
crates/jokoapi/: Cargo.toml  README.md
crates/jokoapi/src/: end_point.rs  lib.rs
crates/jokoapi/src/end_point/: mod.rs
crates/jokoapi/src/end_point/colors/: mod.rs
crates/jokoapi/src/end_point/daily_crafting/: mod.rs
crates/jokoapi/src/end_point/items/: mod.rs
crates/jokoapi/src/end_point/minis/: mod.rs
crates/jokoapi/src/end_point/mounts/: mod.rs
crates/jokoapi/src/end_point/outfits/: mod.rs
crates/jokoapi/src/end_point/quaggans/: mod.rs
crates/jokoapi/src/end_point/races/: mod.rs
crates/jokoapi/src/end_point/worlds/: mod.rs
crates/jokolay/: Cargo.toml
crates/jokolay/src/: lib.rs
crates/jokolay/src/app/: frame.rs  init.rs  menu.rs  mod.rs  wm.rs
crates/jokolay/src/app/theme/: mod.rs
crates/jokolay/src/app/trace/: mod.rs  notification.rs
crates/jokolay_desktop/: Cargo.toml
crates/jokolay_desktop/src/: lib.rs  main.rs  mumble.rs
crates/jokolay_web/: Cargo.toml  index.html
crates/jokolay_web/src/: main.rs
crates/jokolink/: Cargo.toml  README.md  exit_jokolink.sh  run_jokolink.sh
crates/jokolink/src/: lib.rs  linux.rs  main.rs  mlink.rs  types.rs  win.rs
crates/jokolink/src/bevy/: mod.rs
crates/jokolink/src/linux/: mod.rs
crates/jokolink/src/mumble/: ctypes.rs  mod.rs
crates/jokolink/src/mumble_file/: linux.rs  mod.rs  win.rs
crates/jokolink/src/win/: dll.rs  mod.rs
i18n/de-DE/: jokolay.ftl
i18n/en-GB/: jokolay.ftl
jmf/: Cargo.toml  README.md  architecture.md  build.rs
jmf/rapid/: rapid.cpp  rapid.hpp
jmf/src/: lib.rs  main.rs
jmf/src/internal/: mod.rs  zpack.rs
jmf/src/json/: author.rs  category.rs  image.rs  marker.rs  mod.rs  pack.rs  trail.rs
jmf/src/jsonpack/: json_cat.rs  json_marker.rs  json_pack.rs  json_trail.rs  mod.rs  single_json.rs
jmf/src/manager/: mod.rs
jmf/src/xmlpack/: load.rs  mod.rs  rapid.rs  xml_category.rs  xml_file.rs  xml_marker.rs  xml_pack.rs  xml_pack_entry.rs  xml_route.rs  xml_trail.rs  xmlfile_schema.xsd
jokoapi/: Cargo.toml
jokoapi/src/: lib.rs
jokoapi/src/end_point/: mod.rs
jokoapi/src/end_point/colors/: mod.rs
jokoapi/src/end_point/daily_crafting/: mod.rs
jokoapi/src/end_point/items/: mod.rs
jokoapi/src/end_point/minis/: mod.rs
jokoapi/src/end_point/outfits/: mod.rs
jokoapi/src/end_point/quaggans/: mod.rs
jokoapi/src/end_point/worlds/: mod.rs
jokolay/: Cargo.toml  architecture.md
jokolay/shaders/: egui.frag  egui.vert
jokolay/src/: app.rs  config.rs  lib.rs  main.rs
jokolay/src/am/: mod.rs
jokolay/src/client/: mod.rs
jokolay/src/client/am/: mod.rs
jokolay/src/client/gui/: config_window.rs
jokolay/src/client/mm/: mod.rs
jokolay/src/client/tc/: atlas.rs  mod.rs
jokolay/src/config/: mod.rs
jokolay/src/core/: mod.rs
jokolay/src/core/gui/: config.rs  marker.rs  mod.rs  theme.rs  window.rs
jokolay/src/core/input/: dq_input.rs  glfw_input.rs  mod.rs
jokolay/src/core/painter/: scene.rs
jokolay/src/core/painter/egui_renderer/: mod.rs  shader.vs
jokolay/src/core/painter/marker_renderer/: marker.rs
jokolay/src/core/painter/opengl/: buffer.rs  shader.rs  texture.rs
jokolay/src/core/painter/trail_renderer/: shader.fs
jokolay/src/core/renderer/: egui_state.rs  init.rs  mod.rs
jokolay/src/core/window/: glfw_window.rs  linux.rs  mod.rs  windows.rs
jokolink/: Cargo.toml  run_jokolink.sh
jokolink/src/: app.yml  lib.rs  linux.rs  main.rs  mlink.rs  win.rs
jokolink/src/cli/: app.yml  mod.rs
jokotypes/: Cargo.toml
jokotypes/src/: lib.rs
res/: egui.fs  egui.vs  node.fs  node.gs  node.vs  shader.fs  shader.gs  shader.vs
src/: app.rs  config.rs  init.rs  lib.rs  main.rs  server.rs  trace.rs
src/am/: mod.rs
src/client/: mod.rs
src/config/: mod.rs
src/core/: mod.rs
src/fm/: mod.rs
src/glc/: mod.rs
src/gltypes/: buffer.rs  mod.rs  shader.rs  texture.rs  vertex_array.rs
src/gui/: marker.rs  mod.rs  wmarker.rs
src/gw/: category.rs  marker.rs  mlink.rs  mod.rs  trail.rs
src/input/: mod.rs
src/jmf/: README.md  ignore.rs  main.rs  mod.rs
src/joko_render/: blit.wgsl  mod.rs  player_visibility.wgsl
src/joko_script/: mod.rs
src/jokolink/: main.rs  mlink.rs  mod.rs  mumble_backend.rs  run_jokolink.sh
(+150 files in other folders)
