[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1


[workspace]
members = [
    "crates/joko_render",
    "crates/joko_marker_format",
    "crates/jokolink",
    "crates/jokoapi",
    "crates/jokolay",
]


[workspace.dependencies]
tracing = { version = "0.1" }
ringbuffer = { version = "0.14.2" }
egui = { version = "*" }
egui_extras = { version = "*" }
# cap-directories = { version = "*" }
cap-std = { version = "*" }
thiserror = { version = "*" }
serde = { version = "*", features = ["derive"] }
miette = { version = "*", features = ["fancy"] }
url = { version = "*", features = ["serde"] }
serde_json = { version = "*" }
rayon = { version = "*" }
glam = { version = "*", features = ["fast-math"] }
time = { version = "*" }
ureq = { version = "*" }
enumflags2 = { version = "*" }
indexmap = { version = "2" }
rfd = { version = "*" }
