
[workspace]
members = [
    "crates/joko_render",
    "crates/joko_marker_format",
    "crates/jokolink",
    "crates/jokoapi",
    "crates/jokolay",
    "crates/joko_core",
]
resolver = "2"

[workspace.dependencies]
tracing = { version = "0.1" }
ringbuffer = { version = "0.14" }
egui = { version = "*" }
egui_extras = { version = "*" }
cap-std = { version = "2", features = ["fs_utf8"] }
serde = { version = "*", features = ["derive"] }
miette = { version = "*", features = ["fancy"] }
url = { version = "*", features = ["serde"] }
serde_json = { version = "*" }
rayon = { version = "*" }
# tokio = { version = "*", default-features = false, features = [
#     "rt-multi-thread",
#     "sync",
#     "time",
#     "parking_lot"
# ]}
glam = { version = "*", features = ["fast-math"] }
time = { version = "*" }
ureq = { version = "*" }
enumflags2 = { version = "*" }
indexmap = { version = "2" }
rfd = { version = "*" }
smol_str = { version = "*" }
itertools = { version = "*" }
