[package]
name = "jmf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# roxml gives nicer errors which we can use to help point out the issues in imported packs
roxmltree = "0"
# roxml doesn't have serde or ability of writing xml, so we use quick-xml
quick-xml = { version = "0", features = ["serialize"] }
# serde and derive are obvious, path_to_error gives the more exact location for quick_xml, repr is for enums to be represented as integers like Behavior attribute
serde = { version = "1", features = ["derive"] }
serde_path_to_error = "0"
serde_derive = "1"
serde_repr = "0"
serde_json = "1"
# for hex encoding like color attribute
hex = { version = "0", features = ["serde"] }
# encoding for marker packs
base64 = "0"
uuid = { version = "1.0.0-alpha.1", git = "https://github.com/uuid-rs/uuid.git", features = ["serde", "v4"] }
# num-derive = "0.3.3"
# to cast enums to numbers and back
num-traits = "0"
# cast slices of T to slices of U. 
bytemuck = "1"
# for dealing with png files in marker packs. oxipng for compressing png to optimal (smaller) sizes
image = { version = "0", default-features = false, features = ["png"] }
oxipng = "5"
# for hashing images/trails
xxhash-rust = {version = "0", features = ["xxh3"] }
tracing-appender = { version = "0" }
tracing-subscriber = { version = "0" }
tracing = "0"
git-version = "0"
# for easier extraction to folers and compression of folders into zip files (.taco format alias)
zip-extensions = "0"
zip = "0"
# to create temp directories for extraction/compression of zip files
tempfile = "3"
# for async, we can remove features to keep it leaner
tokio = {version = "1", features = ["full"]}
# for async walk dir returning a stream of dir entries
# async-walkdir = "0"
# tokio-stream = {version = "0", features = ["fs"]}
url = {version = "2", features = ["serde"]}
# customized errors. optional honestly
thiserror = "1"
derive_more = "0"

# crevice = {version = "0.8.0", features = ["nalgebra"]}

bitflags = "1.3.2"
serde_with = {version = "1", features = ["json", "base64", "hex", "macros"]}
flume = "0"
fastrand = "1"

time = {version = "0", features = ["serde-human-readable"]}
elementtree = {version = "*"}
walkdir = {version = "2"}
predicates = {version = "2"}
itertools = {version = "0"}
validator = {version = "*", features = ["derive"]}
rgb = {version = "*", features = ["serde"]}
cxx = "1.0"

[dev-dependencies]
serde_test = {version = "1"}

[build-dependencies]
cxx-build = "1.0"