[package]
name = "jokoapi"
version = "0.1.1"
description = "A wrapper of Guild Wars 2 Api"
repository = "https://github.com/coderedart/jokoapi.git"
license = "MIT"
authors = ["coderedart <redartofcode@gmail.com>"]
keywords = ["GuildWars2", "GW2", "API"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0"
const_format = "0"
itertools = "0"
reqwest = {version = "0", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["rt", "macros"]}
url = {version = "2", features = ["serde"]}
