[package]
name = "jokoapi"
version = "0.1.1"
description = "A wrapper of Guild Wars 2 Api"
repository = "https://github.com/coderedart/jokoapi.git"
license = "MIT"
authors = ["coderedart <redartofcode@gmail.com>"]
keywords = ["GuildWars2", "GW2", "API"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.50"
const_format = "0.2.14"
itertools = "0.10.0"
reqwest = {version = "0.11.7", features = ["json"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.72"
tokio = {version = "1.7.1", features = ["rt", "macros"]}
url = {version = "2.2.2", features = ["serde"]}
