[package]
name = "jokolay"
version = "0.1.12"
description = "An Overlay for Guild Wars 2 in rust"
license = "MIT"
authors = ["coderedart <redartofcode@gmail.com>"]
edition = "2021"
keywords = ["GuildWars2", "GW2", "Overlay"]

resolver = "2"

[dependencies]
glfw = { version = "*", git = "https://github.com/coderedart/glfw-rs.git" }
glow = { version = "*", git = "https://github.com/coderedart/glow.git" }
# glfw = {version =  "*", path = "../glfw-rs"}
# glow = {version =  "*", path = "../glow"}
# jokolink = {version  = "*", path =  "../jokolink"}
jokolink = "0.3.0"
jmf = {version = "*", path = "../jmf"}
quick-xml = { version = "0.22.0", features = ["serialize"] }
#serde-xml-rs = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_path_to_error = "0.1.5"
serde_derive = "1.0.130"
serde_repr = "0.1.7"
hex = { version = "0.4.3", features = ["serde"] }
base64 = "0.13.0"
uuid = { version = "1.0.0-alpha.1", git = "https://github.com/uuid-rs/uuid.git", features = ["serde", "v4"] }
num-derive = "0.3.3"
num-traits = "0.2.14"
bytemuck = "1.7.2"
egui = { version = "0.15.0", default-features = false, features = ["persistence", "convert_bytemuck", "multi_threaded", "default_fonts"] }
glm = { version = "0.15.0", package = "nalgebra-glm" }
image = { version = "0.23.14", default-features = false, features = ["png"] }
device_query = "0.2.8"
copypasta = {version = "0.7.1", default-features = false, features = ["x11"]}
log = "0.4.14"
simplelog = "0.11.0"
fastrand = "1.5.0"
anyhow = "1.0.44"
rayon = "1.5.1"
bus = "2.2.3"
guillotiere = {version = "*", features = ["serialization"]}
raw-window-handle = "0.3.3"
serde_json = "1.0.68"
zip-extensions = "0.6.1"
zip = "0.5.13"
tempfile = "3.2.0"
git2 = "0.13.22"
rfd = "0.5.0"
open = "2.0.1"
notify-rust = "4.5.3"
# heim = {version = "0.1.0-rc.1", features = ["full"]} # need async for this one
raw-cpuid = "10.2.0"
tokio = {version = "1.12.0", features = ["full"]}
url = "2.2.2"
tokio-stream = {version = "0.1.7", features = ["fs"]}
flume = "0.10.9"
dashmap = "4.0.2"
ahash = "0.7.6"
# fast_log = "1.3.32"

[target.'cfg(unix)'.dependencies]
x11rb = { version = "0.9.0", features = ["all-extensions"] }

