[package]
name = "jokolay"
version = "0.1.12"
description = "An Overlay for Guild Wars 2 in rust"
license = "MIT"
authors = ["coderedart <redartofcode@gmail.com>"]
edition = "2021"
keywords = ["GuildWars2", "GW2", "Overlay"]

resolver = "2"

[dependencies]
glfw = { version = "*", git = "https://github.com/coderedart/glfw-rs.git", features = ["all"] }
# glfw = {version =  "*", path = "../glfw-rs"}
# jokolink = {version  = "*", path =  "../jokolink"}
jokolink = {version = "*", path = "../jokolink"}
jmf = {version = "*", path = "../jmf"}
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_path_to_error = "0.1.5"
serde_derive = "1.0.130"
serde_repr = "0.1.7"
# hex = { version = "0.4.3", features = ["serde"] }
# base64 = "0.13.0"
# uuid = { version = "1.0.0-alpha.1", git = "https://github.com/uuid-rs/uuid.git", features = ["serde", "v4"] }
# num-derive = "0.3.3"
# num-traits = "0.2.14"
bytemuck = "1.7.2"
egui = { version = "*", git = "https://github.com/emilk/egui.git", default-features = false, features = ["persistence", "convert_bytemuck", "multi_threaded", "default_fonts"] }
glm = { version = "0.16.0", package = "nalgebra-glm", features = ["serde-serialize"] }
image = { version = "0.23.14", default-features = false, features = ["png"] }
copypasta = {version = "0.7.1", default-features = false, features = ["x11"]}
fastrand = "1.5.0"
anyhow = { version = "1.0.44", features = ["backtrace"]}
# rayon = "1.5.1"
# bus = "2.2.3"
guillotiere = {version = "*", features = ["serialization"]}
raw-window-handle = "0.4.2"
serde_json = "1.0.68"
# zip-extensions = "0.6.1"
# zip = "0.5.13"
# tempfile = "3.2.0"
# git2 = "0.13.22"
rfd = "0.6.4"
open = "2.0.1"
notify-rust = "4.5.5"
tokio = {version = "1.12.0", features = ["full"]}
url = "2.2.2"
tokio-stream = {version = "0.1.7", features = ["fs"]}
flume = "0.10.9"
# dashmap = "4.0.2"
# xxhash-rust = {version = "0.8.2", features = ["xxh3"] }

# fast_log = "1.3.32"
parking_lot = "*"
sysinfo = "0.23.0"
tracing-appender = { version = "0" }
tracing-subscriber = { version = "0" }
tracing = "0"
git-version = "0"
rdev = "0.5.1"
time = "0.3.6"
tap = "1.0.1"
circular-queue = "0.2.6"
erupt = { version = "*", features = ["bytemuck", "surface", "loading"]}
erupt-bootstrap = {version = "0.2"  }
#erupt = {version = "*", features = ["bytemuck", "surface", "loading"]}
# wgpu = "0.12.0"
[target.'cfg(unix)'.dependencies]
x11rb = { version = "0.9.0", features = ["all-extensions"] }

