[package]
name = "jokolink"
description = "A crate to extract info from Guild Wars 2 MumbleLink and share it via sockets"
license = "MIT"
repository = "https://github.com/coderedart/jokolink.git"
version = "0.3.0"
authors = ["coderedart <redartofcode@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
widestring = "0"
winapi = { version = "0", features = ["std","winbase", "handleapi", "minwinbase", "ntdef", "winnt", "memoryapi", "winerror", "errhandlingapi", "winuser", "windef"] }
bytemuck = "1"
clap = {version = "2.34.0", features = ["default", "yaml"] }
bitflags = "1"
num-derive = "0"
num-traits = "0"
tracing-appender = {version = "0", optional = true}
tracing-subscriber = {version = "0", optional = true}

tracing = "0"

[features]
default = []
app = ["tracing-appender", "tracing-subscriber"]

[[bin]]
name = "jokolink"
required-features = ["app"]
