[package]
name = "bevy_glfw"
version = "0.7.0"
edition = "2021"
description = "A glfw window and input backend for Bevy Engine"
repository = "https://github.com/coderedart/bevy_glfw"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "glfw"]

[features]
all = ["glfw/all"]
default = ["glfw/default"]
vulkan = ["glfw/vulkan"]

[dependencies]
# bevy
bevy_app = "0.7.0"
bevy_ecs = "0.7.0"
bevy_input = "0.7.0"
bevy_math = "0.7.0"
bevy_window = "0.7.0"
bevy_utils = "0.7.0"
# glfw fork with passthrough
glfw = { version = "0.44.0", default-features = false, git = "https://github.com/coderedart/glfw-rs.git" }
approx = { version = "0.5.0", default-features = false }
raw-window-handle = "0.4.2"

[package.metadata.docs.rs]
features = ["x11"]

[dev-dependencies]
bevy = {version = "0.7.0"}