[package]
name = "jmf"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde and derive are obvious,
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "1", features = ["json", "macros"] }
elementtree = { version = "*" }
# better fs errors
fs-err = "2.7.0"
# for marker / trail attributes
bitflags = "1.3.2"
bytemuck = "1" # for trl files
hex = "0.4.3"
# uuid = { version = "1.0.0-alpha.1", features = ["v3"] }
# for downloading packs?
url = { version = "2", features = ["serde"] }
# for easier extraction to folers and compression of folders into zip files (.taco format alias)
zip = "0.6.2"
# walkdir = {version = "2"}# for tbin meshes
# for dealing with png files in marker packs. oxipng for compressing png to optimal (smaller) sizes
image = { version = "0", default-features = false, features = ["png"] }
# logging
# tracing-appender = { version = "0" }
tracing = "0"
# tracing-error = "0" # for ErrorLayer
# error handling
color-eyre = "0.6"
# for rapid xml bindings
cxx = "1.0"
# crevice = {version = "0.8.0", features = ["nalgebra"]}
# for marker pack versions
semver = { version = "1.0.9", features = ["serde"] }
# to embed PKG version to compare with repository's format version
shadow-rs = "0.11.0"

bevy_math = "0.7.0"

bevy_app = "0.7.0"

[dev-dependencies]
serde_test = { version = "1" }
rstest = "0.13.0"
# rstest_reuse = "0.3.0"
similar-asserts = "1.2.0"
test-log = {version = "0.2.10", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0" , features = ["env-filter", "registry", "fmt"]}

[build-dependencies]
cxx-build = "1.0"
shadow-rs = "0.11.0"
