[package]
name = "jmf"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
# serde and derive are obvious,
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde_with = { version = "2.0.0", default-features = false, features = [
    "json",
    "macros",
] }
elementtree = { version = "*", default-features = false }
# Category paths
camino = { version = "*", default-features = false, features = ["serde1"] }
# for marker / trail attributes
bitflags = { version = "1.3.2", default-features = false }
bytemuck = { version = "1", default-features = false }     # for trl files
hex = { version = "0.4.3", default-features = false }
# uuid = { version = "1.0.0-alpha.1", features = ["v3"] }
# for downloading packs?
url = { version = "2", default-features = false, features = ["serde"] }
# for easier extraction to folers and compression of folders into zip files (.taco format alias)
zip = { version = "0", default-features = false }
# walkdir = {version = "2"}# for tbin meshes
# for dealing with png files in marker packs. oxipng for compressing png to optimal (smaller) sizes
image = { version = "0", default-features = false, features = ["png"] }
# logging
tracing = { version = "0", default-features = false }
tracing-subscriber = { version = "*", features = [
    "env-filter",
] } # for ErrorLayer
# error handling
color-eyre = { version = "0.6", default-features = false }
thiserror = { version = "1.0.31", default-features = false }
# for rapid xml bindings
cxx = { version = "1.0", features = ["std"] }
# crevice = {version = "0.8.0", features = ["nalgebra"]}
# for marker pack versions
semver = { version = "1.0.9", default-features = false, features = ["serde"] }
# to embed PKG version to compare with repository's format version
shadow-rs = { version = "0.16.1", default-features = false }
# walkdirectory... why?
walkdir = { version = "2.3.2", default-features = false }

[dev-dependencies]
serde_test = { version = "1" }
rstest = { version = "0.15.0", default-features = false }
# rstest_reuse = "0.3.0"
similar-asserts = "1.2.0"


[build-dependencies]
cxx-build = { version = "1.0"}
shadow-rs = { version = "0.16.1", default-features = false }
