[package]
name = "joko_marker_format"
version = "0.1.0"
edition = "2021"

[dependencies]
# jmf deps
# for marker packs 
xot = { version = "0" }
relative-path = "1"
# to keep the order of files inside zip. markers packs rely on some files like aaa.xml being read first for marker category order# for representing the paths of files inside xml pack zip
indexmap = { version = "2" }
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }


# for easier extraction to folers and compression of folders into zip files (.taco format alias)
zip = { version = "0.6", default-features = false, features = ["deflate"] }
# for dealing with png files in marker packs. 
image = { version = "0.24", default-features = false, features = ["png"] }
# for rapid xml bindings
cxx = { version = "1.0", features = ["std"] }
base64 = "0.21.2"
rfd = { version = "0" }
joko_core = { path = "../joko_core" }
enumflags2 = { version = "*" }
joko_render = { path = "../joko_render" }
jokolink = { path = "../jokolink" }
[dev-dependencies]
# jmf deps
rstest = { version = "0", default-features = false }
# rstest_reuse = "0.3.0"
similar-asserts = "1"


[build-dependencies]
# for rapidxml
cxx-build = { version = "1" }
