[package]
name = "joko_plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "*", default-features = false }
url = "*"
semver = "*"
# bevy mod scripting pulls in whole bevy with default features which includes gilrs -> stdweb -> time security advisory issue for checkmate
# bevy_mod_scripting = { git = "https://github.com/coderedart/bevy_mod_scripting.git", features = [
#     "luajit",
# ] }
# bevy_egui = { git = "https://github.com/coderedart/bevy_egui.git" }
