[package]
name = "joko_render"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_render_wgpu = { version = "0.5" }
egui_window_glfw_passthrough = { version = "0.5" }
bytemuck = { version = "1", default-features = false }
jokolink = { path = "../jokolink" }
pollster = { version = "*" }
glam = { workspace = true, features = ["bytemuck"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
egui = { workspace = true }
raw-window-handle = { version = "0.5" }
