[package]
name = "jokoapi"
version = "0.1.1"
description = "A wrapper of Guild Wars 2 Api"
repository = "https://github.com/coderedart/jokoapi.git"
license = "MIT"
authors = ["coderedart <redartofcode@gmail.com>"]
keywords = ["GuildWars2", "GW2", "API"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# color-eyre = "0.6"
# tracing-error = "*"
# async-trait = "0.1.50"
const_format = "0.2.14"
# itertools = "0.10.0"
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.72", default-features = false, features = [
    "std",
] }
url = { version = "2.2.2", default-features = false, features = ["serde"] }
# surf = {version = "*"}
