[package]
name = "jokoapi"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.14"
serde = { workspace = true }
enumflags2 = { workspace = true }
ureq = { workspace = true, features = ["json"] }
miette = { workspace = true }
