[package]
name = "jokolay_desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# WARNING: don't enable winit feature. or it will be included in default plugins
bevy = { version = "0.8.0", default-features = false, features = [
    "bevy_core_pipeline",
] }
bevy_egui = { git = "https://github.com/coderedart/bevy_egui.git" }
jokolink = { path = "../jokolink" }
jmf = { path = "../jmf" }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_glfw = { version = "*", path = "../bevy_glfw" }
