[package]
name = "jokolay"                                  # ToDo
version = "0.2.0"
publish = false
authors = ["Red Artist <redartofcode@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]


[dependencies]

# fork because https://github.com/bevyengine/bevy/issues/4649
bevy_egui = { git = "https://github.com/coderedart/bevy_egui.git" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jokolay_desktop = { version = "*", path = "../jokolay_desktop" }
bevy = { version = "0.7", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.7", default-features = false, features = ["bevy_winit"] }

[build-dependencies]
embed-resource = "1.4"
