[package]
name = "jokolink"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib", "lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = { version = "1", default-features = false, features = ["std"] }
num-derive = { version = "0", default-features = false }
num-traits = { version = "0", default-features = false }
tracing-appender = { version = "0" }
tracing-subscriber = { version = "*" }
joko_core = { path = "../joko_core" }
jokoapi = { path = "../jokoapi" }

enumflags2 = { version = "*" }
[target.'cfg(unix)'.dependencies]
x11rb = { version = "0.12", default-features = false, features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51.1", features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
] }
arcdps = { version = "*", default-features = false }
